//! Network Partition Tests for Distributed Storage
//!
//! This module tests the behavior of the distributed storage layer during network partitions.
//! It simulates various partition scenarios and verifies:
//! - Data consistency during partitions
//! - Split-brain prevention
//! - Data reconciliation after partition healing
//! - Leader election behavior during partitions

#![cfg(feature = "test-helpers")]

use std::time::Duration;
use std::collections::HashSet;
use blixard::{
    proto::{
        CreateVmRequest, ListVmsRequest, ClusterStatusRequest,
    },
    test_helpers::TestCluster,
};
use tokio::time::sleep;
use tracing::info;
use tokio::sync::Mutex;
use std::sync::Arc;

/// Simulate a network partition by stopping message flow between node groups
#[allow(dead_code)]
struct NetworkPartition {
    partitioned_nodes: Arc<Mutex<HashSet<(u64, u64)>>>,
}

#[allow(dead_code)]
impl NetworkPartition {
    fn new() -> Self {
        Self {
            partitioned_nodes: Arc::new(Mutex::new(HashSet::new())),
        }
    }

    /// Create a partition between two groups of nodes
    async fn partition(&self, group1: &[u64], group2: &[u64]) {
        let mut partitioned = self.partitioned_nodes.lock().await;
        
        for &node1 in group1 {
            for &node2 in group2 {
                partitioned.insert((node1, node2));
                partitioned.insert((node2, node1));
            }
        }
        
        info!("Created network partition between groups {:?} and {:?}", group1, group2);
    }

    /// Heal a partition, allowing communication to resume
    async fn heal(&self) {
        let mut partitioned = self.partitioned_nodes.lock().await;
        partitioned.clear();
        info!("Healed all network partitions");
    }

    /// Check if communication is allowed between two nodes
    async fn is_allowed(&self, from: u64, to: u64) -> bool {
        let partitioned = self.partitioned_nodes.lock().await;
        !partitioned.contains(&(from, to))
    }
}

/// Test basic partition detection and handling
#[tokio::test(flavor = "multi_thread", worker_threads = 4)]
async fn test_basic_network_partition() {
    let _ = tracing_subscriber::fmt::try_init();
    
    // Create a 5-node cluster
    let cluster = TestCluster::builder()
        .with_nodes(5)
        .build()
        .await
        .expect("Failed to create cluster");
    
    // Get initial leader
    let initial_leader = get_cluster_leader(&cluster).await
        .expect("Should have a leader");
    info!("Initial leader: {}", initial_leader);
    
    // Create VMs before partition
    let leader_client = cluster.leader_client().await.expect("Failed to get leader client");
    
    for i in 0..3 {
        let vm_name = format!("partition-test-vm-{}", i);
        let create_request = CreateVmRequest {
            name: vm_name,
            config_path: "/tmp/test.nix".to_string(),
            vcpus: 1,
            memory_mb: 256,
        };
        
        leader_client.clone()
            .create_vm(create_request)
            .await
            .expect("Failed to create VM");
    }
    
    // Wait for replication
    sleep(Duration::from_millis(200)).await;
    
    // Verify all nodes see all VMs
    for (node_id, _) in cluster.nodes() {
        let client = cluster.client(*node_id).await.expect("Failed to get client");
        let list_response = client.clone()
            .list_vms(ListVmsRequest {})
            .await
            .expect("Failed to list VMs");
        
        assert_eq!(list_response.into_inner().vms.len(), 3,
            "Node {} should see 3 VMs before partition", node_id);
    }
    
    // Simulate network partition: split into majority (1,2,3) and minority (4,5)
    info!("Creating network partition");
    // Note: Real implementation would require network control at peer_connector level
    // For now, this is a placeholder showing the test structure
    
    // During partition, minority should not be able to make progress
    // Majority should elect new leader if necessary and continue operations
    
    // After partition heals, all nodes should converge to same state
    
    cluster.shutdown().await;
}

/// Test split-brain prevention during network partition
#[tokio::test(flavor = "multi_thread", worker_threads = 4)]
async fn test_split_brain_prevention() {
    let _ = tracing_subscriber::fmt::try_init();
    
    let cluster = TestCluster::builder()
        .with_nodes(5)
        .build()
        .await
        .expect("Failed to create cluster");
    
    // Create initial data
    let leader_client = cluster.leader_client().await.expect("Failed to get leader client");
    
    let vm_name = "split-brain-test-vm";
    let create_request = CreateVmRequest {
        name: vm_name.to_string(),
        config_path: "/tmp/test.nix".to_string(),
        vcpus: 2,
        memory_mb: 512,
    };
    
    leader_client.clone()
        .create_vm(create_request)
        .await
        .expect("Failed to create VM");
    
    sleep(Duration::from_millis(200)).await;
    
    // Simulate partition into two groups
    // Group 1: nodes 1,2,3 (majority)
    // Group 2: nodes 4,5 (minority)
    
    // Try to write to both partitions
    // Only majority partition should accept writes
    
    // Verify minority partition rejects writes
    // This prevents split-brain scenarios
    
    cluster.shutdown().await;
}

/// Test data reconciliation after partition healing
#[tokio::test(flavor = "multi_thread", worker_threads = 4)]
async fn test_partition_healing_reconciliation() {
    let _ = tracing_subscriber::fmt::try_init();
    
    let cluster = TestCluster::builder()
        .with_nodes(5)
        .build()
        .await
        .expect("Failed to create cluster");
    
    // Create initial state
    let leader_client = cluster.leader_client().await.expect("Failed to get leader client");
    
    // Create VMs before partition
    for i in 0..5 {
        let vm_name = format!("reconcile-vm-{}", i);
        let create_request = CreateVmRequest {
            name: vm_name,
            config_path: "/tmp/test.nix".to_string(),
            vcpus: 1,
            memory_mb: 256,
        };
        
        leader_client.clone()
            .create_vm(create_request)
            .await
            .expect("Failed to create VM");
    }
    
    sleep(Duration::from_millis(200)).await;
    
    // Record state before partition
    let pre_partition_vms = get_vm_count_all_nodes(&cluster).await;
    assert!(pre_partition_vms.values().all(|&count| count == 5),
        "All nodes should see 5 VMs before partition");
    
    // Simulate partition
    // Majority partition continues to accept writes
    // Create additional VMs in majority partition
    
    // Heal partition
    // Verify minority nodes catch up to majority state
    // All nodes should eventually see the same data
    
    cluster.shutdown().await;
}

/// Test leader election behavior during partition
#[tokio::test(flavor = "multi_thread", worker_threads = 4)]
async fn test_partition_leader_election() {
    let _ = tracing_subscriber::fmt::try_init();
    
    let cluster = TestCluster::builder()
        .with_nodes(5)
        .build()
        .await
        .expect("Failed to create cluster");
    
    let initial_leader = get_cluster_leader(&cluster).await
        .expect("Should have initial leader");
    info!("Initial leader: {}", initial_leader);
    
    // Create partition where initial leader is in minority
    // This should trigger new leader election in majority partition
    
    // Verify:
    // 1. Majority partition elects new leader
    // 2. Minority partition has no leader (prevents split-brain)
    // 3. After healing, single leader emerges
    
    cluster.shutdown().await;
}

/// Test concurrent writes during partition
#[tokio::test(flavor = "multi_thread", worker_threads = 4)]
async fn test_concurrent_writes_during_partition() {
    let _ = tracing_subscriber::fmt::try_init();
    
    let cluster = TestCluster::builder()
        .with_nodes(5)
        .build()
        .await
        .expect("Failed to create cluster");
    
    // Start concurrent write operations
    // Create partition mid-flight
    // Verify only writes to majority partition succeed
    // Verify data consistency after partition heals
    
    cluster.shutdown().await;
}

/// Test cascading failures and recovery
#[tokio::test(flavor = "multi_thread", worker_threads = 4)]
async fn test_cascading_partition_failures() {
    let _ = tracing_subscriber::fmt::try_init();
    
    let cluster = TestCluster::builder()
        .with_nodes(7) // Larger cluster for more complex scenarios
        .build()
        .await
        .expect("Failed to create cluster");
    
    // Simulate multiple partitions occurring in sequence
    // Test system's ability to maintain consistency through:
    // 1. Initial partition
    // 2. Partial healing with immediate re-partition
    // 3. Complete healing
    // 4. Verify final consistency
    
    cluster.shutdown().await;
}

// Helper functions

/// Get the current leader of the cluster
async fn get_cluster_leader(cluster: &TestCluster) -> Option<u64> {
    for (node_id, _) in cluster.nodes() {
        if let Ok(client) = cluster.client(*node_id).await {
            if let Ok(response) = client.clone().get_cluster_status(ClusterStatusRequest {}).await {
                let status = response.into_inner();
                if status.leader_id > 0 {
                    return Some(status.leader_id);
                }
            }
        }
    }
    None
}

/// Get VM count from all nodes
async fn get_vm_count_all_nodes(cluster: &TestCluster) -> std::collections::HashMap<u64, usize> {
    let mut counts = std::collections::HashMap::new();
    
    for (node_id, _) in cluster.nodes() {
        if let Ok(client) = cluster.client(*node_id).await {
            if let Ok(response) = client.clone().list_vms(ListVmsRequest {}).await {
                counts.insert(*node_id, response.into_inner().vms.len());
            } else {
                counts.insert(*node_id, 0);
            }
        } else {
            counts.insert(*node_id, 0);
        }
    }
    
    counts
}

// Note: Full network partition simulation would require:
// 1. Modifications to peer_connector to respect partition rules
// 2. Test-only hooks in the networking layer
// 3. Careful timing control to ensure predictable test behavior
//
// The tests above show the structure and verification logic,
// but would need infrastructure support to fully implement.